kernel/atomgit/MIPS_ cevt-ds1287 缺失头文件导致编译失败.txt
#标题
MIPS: cevt-ds1287 缺失头文件导致编译失败

#内核版本
OLK-6.6

#问题现象
使用 gcc-14 编译 MIPS 架构内核时，开启 `-Werror` 选项后，由于缺少函数原型声明，编译报错并终止。

#主要错误日志
arch/mips/kernel/cevt-ds1287.c:15:5: error: no previous prototype for ‘ds1287_timer_state’ [-Werror=missing-prototypes]
   15 | int ds1287_timer_state(void)
      |     ^~~~~~~~~~~~~~~~~~
arch/mips/kernel/cevt-ds1287.c:20:5: error: no previous prototype for ‘ds1287_set_base_clock’ [-Werror=missing-prototypes]
   20 | int ds1287_set_base_clock(unsigned int hz)
      |     ^~~~~~~~~~~~~~~~~~~~~
arch/mips/kernel/cevt-ds1287.c:103:12: error: no previous prototype for ‘ds1287_clockevent_init’ [-Werror=missing-prototypes]
  103 | int __init ds1287_clockevent_init(int irq)
      |            ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[7]: *** [scripts/Makefile.build:207: arch/mips/kernel/cevt-ds1287.o] Error 1

#问题根因
`cevt-ds1287.c` 文件中未包含 `ds1287.h` 头文件，导致 `ds1287_timer_state`、`ds1287_set_base_clock` 和 `ds1287_clockevent_init` 等函数缺少原型声明。

#解决方案
在 `arch/mips/kernel/cevt-ds1287.c` 文件中添加缺失的头文件引用：`#include <asm/ds1287.h>`。

#来源
https://atomgit.com/openeuler/kernel/commit/db4c49afe467116d16e6b758b7385b531df6d361